--- a/Extensions/full-screen/src/ui/components/ProgressBar/styles.scss
+++ b/Extensions/full-screen/src/ui/components/ProgressBar/styles.scss
@@ -42,7 +42,7 @@
         float: right;
         position: relative;
         left: 7px;
-        top: -2px;
+        top: -3px;
         display: none;
         pointer-events: none;
     }
